syntax = "proto3";
option go_package = "github.com/0x00b/gobbq/components/proxy/proxypb;proxypb";
package proxypb;

import "bbq.proto";

message PingPong{
}

message RegisterInstRequest{
	string EntityID = 1;
	string InstID = 2;
}
message RegisterInstResponse{
}
 

message RegisterEntityRequest{
	string EntityID = 1;
	string InstID = 2;
}

message RegisterEntityResponse{
}
 
message RegisterServiceRequest{
	string ServiceName = 1;
	string InstID = 2;
}

message RegisterServiceResponse{
}
 
service Proxy {
	option (bbq.service_type) = Service;

	rpc RegisterInst(RegisterInstRequest) returns(RegisterInstResponse) {}

	rpc RegisterEntity(RegisterEntityRequest) returns(RegisterEntityResponse) {}
	rpc RegisterService(RegisterServiceRequest) returns(RegisterServiceResponse) {}

	rpc UnregisterEntity(RegisterEntityRequest) returns(RegisterEntityResponse) {}
	rpc UnregisterService(RegisterServiceRequest) returns(RegisterServiceResponse) {}

	rpc Ping(PingPong) returns(PingPong) {}
}